crates/pcb/tests/snapshots/netlist__netlist_component_infers_footprint_from_symbol_property.snap
---
source: crates/pcb/tests/netlist.rs
assertion_line: 436
expression: output
---
{
  "<TEMP_DIR>/boards/KiCadSymbolFootprintInference.zen:<root>.D1": {
    "footprint": "package://gitlab.com/kicad/libraries/kicad-footprints@9.0.3/LED_SMD.pretty/LED_1206_3216Metric.kicad_mod",
    "symbol_path": "package://gitlab.com/kicad/libraries/kicad-symbols@9.0.3/LED.kicad_sym"
  }
}
