crates/pcb/tests/snapshots/netlist__netlist_component_with_dot_in_name.snap
---
source: crates/pcb/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/ComponentWithDots.zen:<root>": {
    "symbol_positions": {
      "comp:SMF6.0A": {
        "rotation": 0.0,
        "x": 100.0,
        "y": 100.0
      }
    }
  }
}
