crates/pcb/tests/snapshots/netlist__netlist_hierarchical_board_with_positions.snap
---
source: crates/pcb/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/HierarchicalBoard.zen:<root>": {
    "symbol_positions": {
      "comp:LED1.D1": {
        "rotation": 90,
        "x": 150,
        "y": 100
      },
      "comp:LED1.R1": {
        "rotation": 0,
        "x": 100,
        "y": 100
      },
      "comp:LED2.D1": {
        "rotation": 90,
        "x": 150,
        "y": 200
      },
      "comp:LED2.R1": {
        "rotation": 0,
        "x": 100,
        "y": 200
      },
      "sym:GND#1": {
        "rotation": 0,
        "x": 50,
        "y": 250
      },
      "sym:GND#2": {
        "rotation": 0,
        "x": 200,
        "y": 250
      },
      "sym:VCC_3V3#1": {
        "rotation": 0,
        "x": 50,
        "y": 150
      },
      "sym:VCC_3V3#2": {
        "rotation": 0,
        "x": 200,
        "y": 150
      }
    }
  }
}
