crates/pcb/tests/snapshots/netlist__netlist_mixed_position_formats.snap
---
source: crates/pcb/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/MixedPositions.zen:<root>": {
    "component_positions": {
      "R1": {
        "rotation": 0.0,
        "x": 100.0,
        "y": 100.0
      }
    },
    "net_positions": {
      "339": [
        {
          "rotation": 0.0,
          "x": 80.0,
          "y": 80.0
        }
      ],
      "341": [
        {
          "rotation": 0.0,
          "x": 125.0,
          "y": 100.0
        },
        {
          "rotation": 0.0,
          "x": 125.0,
          "y": 150.0
        }
      ]
    }
  }
}
