crates/pcb/tests/snapshots/netlist__netlist_simple_board_with_positions.snap
---
source: crates/pcb/tests/netlist.rs
expression: output
---
{
  "<TEMP_DIR>/boards/SimpleBoard.zen:<root>": {
    "component_positions": {
      "D1": {
        "rotation": 90.0,
        "x": 150.0,
        "y": 200.0
      },
      "R1": {
        "rotation": 0.0,
        "x": 100.0,
        "y": 200.0
      }
    },
    "net_positions": {
      "339": [
        {
          "rotation": 0.0,
          "x": 80.0,
          "y": 180.0
        },
        {
          "rotation": 0.0,
          "x": 120.0,
          "y": 180.0
        }
      ],
      "340": [
        {
          "rotation": 0.0,
          "x": 80.0,
          "y": 220.0
        },
        {
          "rotation": 0.0,
          "x": 170.0,
          "y": 220.0
        }
      ],
      "341": [
        {
          "rotation": 0.0,
          "x": 125.0,
          "y": 200.0
        }
      ]
    }
  }
}
